--- a/Sur 3AvD/index.html
+++ b/Sur 3AvD/index.html
@@ -12,7 +12,7 @@
         <header>
                 <main>
                     <!--Bloque donde doy opciones de menu en el header-->
-                    <h1 id="titulo"> Sur3 AvD AAAAAAAAAAA</h1>
+                    <h1 id="titulo"> Sur3 AvD</h1>
                             <nav>
                                 <ul>
                         <img src="\assets\Img\rgb.png" width="100" height="100"/>
